# baking-companion

./: .gitignore  README.md  pyproject.toml
baking_companion/: __init__.py  cli.py  duration.py  engine.py  graph.py  importer.py  intents.py  library.py  llm.py  models.py  recipe_loader.py  router.py  scale.py  scheduler.py  store.py  web.py
baking_companion/webui/: app.css  app.js  bakes.html  bakes.js  ds.css  index.html  manage.html  manage.js  style.css
docs/: 01-architecture.md  02-graph-model.md  03-hardware.md  04-status.md  05-build-plan.md
recipes/: country_loaf.yaml  sourdough_loaf.yaml  starter_build.yaml
tests/: conftest.py  test_duration.py  test_engine.py  test_fork.py  test_graph.py  test_importer.py  test_intents.py  test_scale.py  test_scheduler.py
