[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "baking-companion"
version = "0.1.0"
description = "A graph-driven, confirm-only voice companion for long bakes"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
]

[project.scripts]
bake = "baking_companion.cli:main"

[tool.setuptools]
packages = ["baking_companion"]

[tool.setuptools.package-data]
baking_companion = ["webui/*"]
